Adds a first test, structures layout and experiments with the tmdb haskell library

--- a/hie.yaml
+++ b/hie.yaml
@@ -1,4 +1,8 @@
 cradle:
   cabal:
-    - path: "./"
+    - path: "./app"
       component: "mkv-tagify"
+    - path: "./test"
+      component: "test"
+    - path: "./"
+      component: "lib:mkv-tagify"
