--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   test:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: macos
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -31,6 +31,13 @@ jobs:
           install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20201221_9fab14a/install
           extra_nix_config: |
             experimental-features = nix-command flakes
+      - uses: cachix/cachix-action@v8
+        with:
+          name: tricktron
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+          extraPullNames: https://hydra.iohk.io,https://cache.nixos.org
+
+
 
       # Runs a single command using the runners shell
-      - run: nix build .#checks.x86_64-linux.test
+      - run: nix build .#checks.x86_64-darwin.test
