--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,13 +31,12 @@ jobs:
           install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20201221_9fab14a/install
           extra_nix_config: |
             experimental-features = nix-command flakes
+            substituters = https://hydra.iohk.io https://cache.nixos.org
+            trusted-public-keys = hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
+
       - uses: cachix/cachix-action@v8
         with:
           name: tricktron
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-          extraPullNames: https://hydra.iohk.io,https://cache.nixos.org
-
-
-
       # Runs a single command using the runners shell
       - run: nix build .#checks.x86_64-darwin.test
