--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.4
         with:
           fetch-depth: 0
 
@@ -41,9 +41,9 @@ jobs:
 
       - name: Run Tests
         run: |
-          if [ "$RUNNER_OS" == "macOS" ]; then
+          if [ "$RUNNER_OS" = "macOS" ]; then
             nix build .#checks.x86_64-darwin.test
-          elif [ "$RUNNER_OS" == "Linux" ]; then
+          elif [ "$RUNNER_OS" = "Linux" ]; then
             nix build .#checks.x86_64-linux.test
           else
             echo "RUNNER_OS not supported"
